@@ -31,22 +31,39 @@ public class App
 
     private static void mockNetworkMessages(){
 
-        ArrayList<String> sceneList = new ArrayList<String>();
-        sceneList.add("splash");
-        sceneList.add("myDrawImage");
-        sceneList.add("drawCards");
+        ArrayList<DrawableCard> cardList1 = new ArrayList<>();
+        cardList1.add(new DrawableCard(1, 100, 100));
+
+        RenderingMessage renderingMessage1 =
+                new RenderingMessage(cardList1, null);
+
+        ArrayList<DrawableCard> cardList2 = new ArrayList<>();
+        cardList2.add(new DrawableCard(1, 200, 100));
+        cardList2.add(new DrawableCard(2, 300, 200));
+
+        RenderingMessage renderingMessage2 =
+                new RenderingMessage(cardList2, null);
+
+        ArrayList<RenderingMessage> sceneList = new ArrayList<>();
+        sceneList.add(renderingMessage1);
+        sceneList.add(renderingMessage2);
+
 
         Timer timer = new Timer("mock");
         TimerTask task = new TimerTask() {
             public void run() {
+
                 if (sceneList.size()>0) {
-                    String s = sceneList.getFirst();
-                    sceneList.removeFirst();
+                    // was: String s = sceneList.getFirst();
+                    RenderingMessage s = sceneList.getFirst();
+                    sceneList.remove(0);
                     System.out.println(s);
-                    smallModel.setTimeStr(s);
+                    //was: smallModel.setTimeStr(s);
+                    smallModel.setRenderingMessage(s);
                 }
             }
         };
+
 
 
         long delay = 0;
